--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /*==============================================
-  Project:   Massive - Multipurpose Responsive Theme
+  Project:   Sougata Dafader Portfolio
   Build:     Bootstrap 3+
-  Author:    ThemeBucket
+  Author:    Sougata 
  ===============================================*/
 /*==============================================
   Table of Contents
@@ -4586,7 +4586,7 @@ comments-list
     top: -50px;
     left: 50%;
     margin-left: -5%;
-    padding: 20px;
+    padding: 12px;
     text-align: center;
     border: 5px solid #222; 
     background-color: #fff;
