--- a/assets/css/component.css
+++ b/assets/css/component.css
@@ -6,7 +6,7 @@
 /*gradient Start*/
 	background-image: -moz-linear-gradient(45deg, #3f3251 2%, #002025 100%);
   background-image: -webkit-linear-gradient(45deg, #3f3251 2%, #002025 100%);
-  background-image: linear-gradient(45deg, #216d7b 30%, #1a074e  90%);
+  background-image: linear-gradient(45deg, #0089e1 30%, #00105F  90%);
 /*gradient End*/
 
 /*Solid Fill
